--- a/src/content/posts/beatoraja-on-arch-linux.mdx
+++ b/src/content/posts/beatoraja-on-arch-linux.mdx
@@ -11,6 +11,7 @@ tags:
   - Linux
 author: mopeneko
 ---
+import YouTube from "@components/YouTube.astro";
 
 ## 概要
 
@@ -39,5 +40,4 @@ exec java -Xms1g -Xmx4g -jar beatoraja.jar
 ## プレイ動画
 
 下手ですが…
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9Oa8oMuX58E?si=anKptPjBC2cLw79r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<YouTube videoID="9Oa8oMuX58E" />
