Use h2 for all headings

--- a/src/content/posts/cbg9-review.mdx
+++ b/src/content/posts/cbg9-review.mdx
@@ -25,9 +25,7 @@ import packagePicture from "@/content/images/foto_no_exif-1--1.jpg";
 
 ジャパニーズマゲニーズという有名なラッパーグループとのコラボ製品らしいです。
 
-## レビュー
-
-### ナチュラルな体感、サイコアクティブ的な体感は無し
+## ナチュラルな体感、サイコアクティブ的な体感は無し
 
 最近はHHCPOのようなサイコアクティブ系カンナビノイドが流行っていますが、それによく見られるマンチーや気分の変容(いわゆる"ハイ"になるなど)はありません。
 
@@ -35,7 +33,7 @@ import packagePicture from "@/content/images/foto_no_exif-1--1.jpg";
 
 しかし、サイコアクティブ系は使い続けると効果が薄くなってしまうので、そういった際に使うのはアリだと思います。
 
-### 抑うつ症状が落ち着く
+## 抑うつ症状が落ち着く
 
 私は双極性障害を患っていて、特に抑うつ症状が強く出ています。
 
@@ -45,7 +43,7 @@ import packagePicture from "@/content/images/foto_no_exif-1--1.jpg";
 
 同じように抑うつ症状に悩む方は試す価値があるかもしれません。
 
-#### 注意
+## 注意
 
 カンナビノイドの効果は個人差があります。
 
@@ -55,7 +53,7 @@ import packagePicture from "@/content/images/foto_no_exif-1--1.jpg";
 
 本製品は執筆時点で0.5mLのみが販売されているため、買い間違うことは無いと思います。
 
-### 味は普通に大麻
+## 味は普通に大麻
 
 味は普通に大麻なので、土っぽい味が苦手な方はご注意ください。
 
