Use Alert component to alert

--- a/src/content/posts/cbg9-review.mdx
+++ b/src/content/posts/cbg9-review.mdx
@@ -14,6 +14,7 @@ author: mopeneko
 import MyPicture from "@components/MyPicture.astro";
 import exterior from "@/content/images/foto_no_exif-2--1-.jpg";
 import packagePicture from "@/content/images/foto_no_exif-1--1.jpg";
+import Alert from "@components/Alert.astro";
 
 先日、名古屋栄にあるADD CBDの店舗に行ってきました。
 
@@ -45,6 +46,7 @@ import packagePicture from "@/content/images/foto_no_exif-1--1.jpg";
 
 ## 注意
 
+<Alert level="warning">
 カンナビノイドの効果は個人差があります。
 
 私の友人にもカンナビノイドが全く効かない人がいます。
@@ -52,6 +54,7 @@ import packagePicture from "@/content/images/foto_no_exif-1--1.jpg";
 そのため、最初は0.5mLの製品を1つだけ買うことをおすすめします。
 
 本製品は執筆時点で0.5mLのみが販売されているため、買い間違うことは無いと思います。
+</Alert>
 
 ## 味は普通に大麻
 
